apply plugin: 'com.android.library'

dependencies {
    testImplementation libs.androidx.appcompat
    testImplementation project(':library')
    testImplementation project(':mocks')
    testImplementation project(':testutil')
    testImplementation libs.guava.testlib
    testImplementation libs.truth
    testImplementation libs.junit
    testImplementation libs.mockito
    testImplementation libs.robolectric
    testImplementation libs.mockwebserver
    testImplementation libs.androidx.test.core
    testImplementation libs.androidx.junit
    testImplementation libs.androidx.test.runner
}

tasks.withType(JavaCompile) {
    options.fork = true
}

afterEvaluate {
    lint.enabled = false
    compileReleaseJavaWithJavac.enabled = false
    compileDebugJavaWithJavac.enabled = false
}

android.testOptions.unitTests.all { Test testTask ->
    // configure max heap size of the test JVM
    testTask.maxHeapSize = TEST_JVM_MEMORY_SIZE as String
    if (JavaVersion.current() <= JavaVersion.VERSION_1_7) {
        // Java HotSpot(TM) 64-Bit Server VM warning: ignoring option MaxPermSize=2048m; support was removed in 8.0
        testTask.jvmArgs "-XX:MaxPermSize=${TEST_JVM_MEMORY_SIZE}"
    }

    // Initializing Robolectric is expensive, two threads seem to be around the only level where any
    // improvement is seen.
    testTask.maxParallelForks = 2
}

android {
    namespace 'com.bumptech.glide.test'
    compileSdkVersion libs.versions.compile.sdk.version.get()

    defaultConfig {
        minSdk libs.versions.min.sdk.version.get() as int
        targetSdk libs.versions.target.sdk.version.get() as int
        versionName VERSION_NAME as String
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    testOptions.unitTests.includeAndroidResources = true

    sourceSets {
        androidTest {
            resources.srcDirs += ['../../exifsamples']
        }
        test {
            resources.srcDirs += ['../../exifsamples']
        }
    }
}
